--- a/#src/scss/blocks/_promo.scss
+++ b/#src/scss/blocks/_promo.scss
@@ -1,8 +1,45 @@
 .promo {
 	margin-top: 26px;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 27%;
+		left: 28%;
+		width: 27px;
+		height: 27px;
+		background: url("../img/icons/decorations/oval-3.svg") no-repeat center center;
+	}
+	&::after {
+		content: "";
+		position: absolute;
+		top: 35%;
+		left: 14%;
+		width: 36px;
+		height: 36px;
+		background: url(../img/icons/decorations/triangle.svg) no-repeat center center;
+		transform: rotate(100deg);
+	}
 	&__wrapper {
 		display: flex;
 		align-items: center;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 64%;
+			left: 17%;
+			width: 27px;
+			height: 27px;
+			background: url("../img/icons/decorations/oval-1.svg") no-repeat center center;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			top: 73%;
+			left: 44%;
+			width: 40px;
+			height: 40px;
+			background: url(../img/icons/decorations/triangle-2.svg) no-repeat center center;
+		}
 	}
 	&-body {
 		&__title {
