--- a/#src/scss/blocks/_documents.scss
+++ b/#src/scss/blocks/_documents.scss
@@ -10,41 +10,41 @@
 		grid-auto-rows: 190px;
 		gap: 30px;
 	}
-}
 
-.documents-item {
-	background: #ffffff;
-	box-shadow: 0px 7px 30px rgba(0, 0, 0, 0.1);
-	padding: 32px 50px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-	-ms-transition: all 0.5s;
-	-o-transition: all 0.5s;
-	cursor: pointer;
-	&:hover {
-		transform: scale(1.05);
-		-webkit-transform: scale(1.05);
-		-moz-transform: scale(1.05);
-		-ms-transform: scale(1.05);
-		-o-transform: scale(1.05);
-	}
+	&-item {
+		background: #ffffff;
+		box-shadow: 0px 7px 30px rgba(0, 0, 0, 0.1);
+		padding: 32px 50px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		transition: all 0.5s;
+		-webkit-transition: all 0.5s;
+		-moz-transition: all 0.5s;
+		-ms-transition: all 0.5s;
+		-o-transition: all 0.5s;
+		cursor: pointer;
+		&:hover {
+			transform: scale(1.05);
+			-webkit-transform: scale(1.05);
+			-moz-transform: scale(1.05);
+			-ms-transform: scale(1.05);
+			-o-transform: scale(1.05);
+		}
 
-	&__icon {
-		width: 66px;
-		height: 66px;
-	}
+		&__icon {
+			width: 66px;
+			height: 66px;
+		}
 
-	&__title {
-		font-weight: 600;
-		font-size: 19px;
-		line-height: 23px;
-		text-align: center;
-		color: #333333;
-		margin-top: 17px;
-		width: 202px;
+		&__title {
+			font-weight: 600;
+			font-size: 19px;
+			line-height: 23px;
+			text-align: center;
+			color: #333333;
+			margin-top: 17px;
+			width: 202px;
+		}
 	}
 }
