--- a/#src/scss/blocks/media.scss
+++ b/#src/scss/blocks/media.scss
@@ -1,13 +1,39 @@
 @media (max-width: 1440px) {
 	.header {
-		background: #fafafb;
-	}
-	.promo {
 		background: #afc1ec;
+		&-main {
+			&__logo {
+				color: #fafafa;
+			}
+			&__desc {
+				color: #404040;
+			}
+		}
+		&-contacts {
+			&__phone {
+				&::before {
+					background: url("../img/icons/contact/call-2.svg") no-repeat center center;
+				}
+			}
+			&__email {
+				&::before {
+					background: url("../img/icons/contact/mail-2.svg") no-repeat center center;
+				}
+			}
+		}
+		&-nav {
+			&__link {
+				color: rgb(7, 7, 7);
+			}
+		}
 	}
 }
 @media (max-width: 1199px) {
 	.header {
+		&::after {
+			top: 41%;
+			left: 46%;
+		}
 		&-main {
 			&__logo {
 				font-size: 50px;
@@ -24,6 +50,20 @@
 		width: 175px;
 	}
 	.promo {
+		&::before {
+			top: 28%;
+			left: 24%;
+		}
+		&::after {
+			top: 34%;
+			left: 7%;
+		}
+		&__wrapper {
+			&::before {
+				top: 64%;
+				left: 3%;
+			}
+		}
 		&-body {
 			&__title {
 				width: 596px;
@@ -43,12 +83,28 @@
 			gap: 25px 40px;
 		}
 	}
+	.programs {
+		&-slider {
+			&::before {
+				right: 18%;
+			}
+			&::after {
+				right: 23%;
+			}
+		}
+	}
 	.sertificate {
 		&-slider {
 			width: 78% !important;
 			display: flex;
 			justify-content: space-between;
 			margin: 0 auto;
+			&::before {
+				right: 18%;
+			}
+			&::after {
+				right: 15%;
+			}
 		}
 	}
 	.news {
@@ -78,9 +134,24 @@
 			}
 		}
 	}
+	.footer {
+		&-services {
+			flex-basis: 25%;
+		}
+		&-menu {
+			flex-basis: 28%;
+		}
+		&-contacts {
+			flex-basis: 36%;
+		}
+	}
 }
 @media (max-width: 992px) {
 	.header {
+		&::after {
+			top: 45%;
+			left: 49%;
+		}
 		&-main {
 			flex-wrap: wrap;
 			&__logo {
@@ -106,6 +177,20 @@
 		width: 195px;
 	}
 	.promo {
+		&::before {
+			top: 31%;
+			left: 27%;
+		}
+		&::after {
+			top: 37%;
+			left: 7%;
+		}
+		&__wrapper {
+			&::after {
+				top: 75%;
+				left: 49%;
+			}
+		}
 		&-body {
 			&__title {
 				width: 465px;
@@ -130,12 +215,36 @@
 			gap: 25px 40px;
 		}
 	}
+	.programs {
+		&-slider {
+			&::before {
+				top: auto;
+				right: auto;
+				left: 5%;
+				bottom: 17%;
+			}
+			&::after {
+				right: 11%;
+				top: 15%;
+			}
+		}
+	}
 	.sertificate {
 		&-slider {
 			width: 66% !important;
 			display: flex;
 			justify-content: space-between;
 			margin: 0 auto;
+			&::before {
+				top: -11%;
+				right: 0%;
+				transform: rotate(75deg);
+			}
+			&::after {
+				top: auto;
+				bottom: -16%;
+				right: 88%;
+			}
 		}
 		&__arrow {
 			&_next {
@@ -154,6 +263,16 @@
 			grid-template-areas:
 				"main main"
 				"first second";
+			&::before {
+				bottom: -5%;
+				left: 3%;
+			}
+			&::after {
+				top: 48%;
+				right: 1%;
+				bottom: auto;
+				left: auto;
+			}
 		}
 		&-stock {
 			width: 100%;
@@ -179,10 +298,33 @@
 			}
 		}
 	}
+	.footer {
+		&__wrapper {
+			flex-wrap: wrap;
+		}
+		&-services {
+			flex-basis: 48%;
+		}
+		&-menu {
+			flex-basis: 48%;
+		}
+		&-contacts {
+			flex-basis: 100%;
+			margin-top: 20px;
+		}
+	}
 }
 
 @media (max-width: 767px) {
 	.header {
+		&::after {
+			top: 77%;
+			left: 75%;
+		}
+		&::before {
+			top: 75%;
+			left: 10%;
+		}
 		&-main {
 			justify-content: start;
 			&__btn {
@@ -201,7 +343,7 @@
 			-moz-transition: all 0.4s;
 			-ms-transition: all 0.4s;
 			-o-transition: all 0.4s;
-			top: -100%;
+			top: -125%;
 			left: 0;
 			position: fixed;
 			background: #000;
@@ -271,7 +413,7 @@
 				top: 0;
 				left: 0;
 				width: 100%;
-				height: 100vh;
+				height: 100%;
 			}
 		}
 	}
@@ -280,10 +422,26 @@
 	}
 	.promo {
 		padding-bottom: 40px;
-		height: 86vh;
+		&::before {
+			top: 20%;
+			left: 20%;
+		}
+		&::after {
+			top: 43%;
+			left: 3%;
+		}
 		&__wrapper {
 			flex-wrap: wrap-reverse;
 			justify-content: center;
+			&::before {
+				top: 11%;
+				left: 75%;
+			}
+			&::after {
+				top: 38%;
+				left: 82%;
+				transform: rotate(169deg);
+			}
 		}
 		&-body {
 			&__title {
@@ -313,6 +471,15 @@
 		&__wrapper {
 			grid-template-columns: repeat(2, minmax(230px, auto));
 			gap: 30px;
+		}
+		&-item {
+			&:hover {
+				transform: scale(1);
+				-webkit-transform: scale(1);
+				-moz-transform: scale(1);
+				-ms-transform: scale(1);
+				-o-transform: scale(1);
+			}
 		}
 	}
 	.sertificate {
@@ -350,18 +517,17 @@
 	}
 	.promo {
 		padding-bottom: 40px;
-		height: 86vh;
 		&__wrapper {
 			flex-wrap: wrap-reverse;
 			justify-content: center;
 		}
 		&-body {
 			&__title {
-				width: 85%;
+				width: 90%;
 				text-align: center;
 				margin: 0 auto;
 				line-height: 38px;
-				font-size: 22px;
+				font-size: 24px;
 			}
 			&__desc {
 				text-align: center;
@@ -443,6 +609,22 @@
 			&_second {
 				grid-area: second !important;
 			}
+		}
+	}
+	.footer {
+		&__wrapper {
+			flex-wrap: wrap;
+		}
+		&-services {
+			flex-basis: 90%;
+		}
+		&-menu {
+			flex-basis: 90%;
+			margin-top: 20px;
+		}
+		&-contacts {
+			flex-basis: 90%;
+			margin-top: 20px;
 		}
 	}
 }
