created: animation for main page

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -84,6 +84,7 @@ body {
 //@import "lightgallery";
 //@import "pagging";
 @import "swiper-bundle.min";
+@import "aos";
 @import "popup";
 @import "header";
 @import "blocks/promo";
