--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -92,6 +92,7 @@ body {
 @import "blocks/guarantees";
 @import "blocks/programs";
 @import "blocks/sertificate";
+@import "blocks/attestation";
 @import "blocks/news";
 @import "footer";
 @import "blocks/media";
