--- a/#src/scss/blocks/_sertificate.scss
+++ b/#src/scss/blocks/_sertificate.scss
@@ -1,6 +1,25 @@
 .sertificate {
+	position: relative;
 	background: #f6f6f6;
 	padding: 48px 0 74px 0;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 4%;
+		right: 23%;
+		width: 40px;
+		height: 40px;
+		background: url("../img/icons/decorations/triangle-2.svg") no-repeat center center;
+	}
+	&::after {
+		content: "";
+		position: absolute;
+		top: 17%;
+		right: 20%;
+		width: 31px;
+		height: 31px;
+		background: url("../img/icons/decorations/oval-3.svg") no-repeat center center;
+	}
 	&__title {
 		margin-bottom: 35px;
 	}
@@ -12,24 +31,6 @@
 		display: flex;
 		justify-content: space-between;
 		margin: 0 auto;
-		&::before {
-			content: "";
-			position: absolute;
-			top: -33%;
-			right: 20%;
-			width: 40px;
-			height: 40px;
-			background: url("../img/icons/decorations/triangle-2.svg") no-repeat center center;
-		}
-		&::after {
-			content: "";
-			position: absolute;
-			top: -14%;
-			right: 16%;
-			width: 31px;
-			height: 31px;
-			background: url("../img/icons/decorations/oval-3.svg") no-repeat center center;
-		}
 	}
 	&-slide {
 		max-width: 223px;
