--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -77,7 +77,11 @@
 		display: flex;
 		flex-wrap: wrap;
 	}
-
+	&-second {
+		padding: 30px 0 20px 0;
+		background: #f6f6f6;
+		box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.149476);
+	}
 	&-main {
 		flex-basis: 100%;
 		display: flex;
